--- a/adaptaciones.html
+++ b/adaptaciones.html
@@ -52,14 +52,14 @@
             <li class="nav-item">
                 <a class="nav-link" href="index.html">Inicio</a>
             </li>
-            <li class="nav-item dropdown active">
+            <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbar-productos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Productos</a>
                 <div class="dropdown-menu dropdown-primary" aria-labelledby="navbar-productos">
-                    <a class="dropdown-item" href="cajas-secas.html">Cajas secas</a>
-                    <a class="dropdown-item" href="alargamientos.html">Alargamientos</a>
+                    <a class="dropdown-item" href="cajas-secas.html">Cajas secas, de copete y cuadradas</a>
+                    <a class="dropdown-item" href="alargamientos.html">Alargamientos y acorazados</a>
                     <a class="dropdown-item" href="carrocerias.html">Carrocerías</a>
-                    <a class="dropdown-item" href="cajas-refrigeradas.html">Cajas refrigeradas</a>
-                    <a class="dropdown-item" href="adaptaciones.html">Adaptaciones</a>
+                    <a class="dropdown-item" href="cajas-refrigeradas.html">Cajas de refrigeración</a>
+                    <a class="dropdown-item" href="adaptaciones.html">Adaptaciones y trabajos especiales</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -81,7 +81,7 @@
 <section class="view image-intro mt-5" id="intro-adaptaciones">
     <div class="mask flex-center rgba-black-light">
         <div>
-            <h1 class="mt-0 mb-3 pt-4 pt-md-0 text-center text-uppercase">Adaptaciones y trabajos especiales</h1>
+            <h1 class="mt-0 mb-3 pt-4 pt-md-0 text-center text-uppercase wow fadeInUp">Adaptaciones y trabajos especiales</h1>
             <h1 class="text-center"><i class="fas fa-chevron-down fa-lg arrow-animation"></i></h1>
         </div>
     </div>
@@ -94,8 +94,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8 col-lg-6">
-                <p>Nuestros años de experiencia, la confianza de nuestros clientes y la calidad de nuestros trabajos nos respaldan.</p>
-                <p>Te ayudamos a diseñar tu caja o carroceria de acuerdo a tus necesidades y a decidir la mejor opción teniendo en cuenta la calidad de neustro producto. Todo es posible con nosotros.</p>
+                <p class="wow fadeInUp">Nuestros años de experiencia, la confianza de nuestros clientes y la calidad de nuestros trabajos nos respaldan.</p>
+                <p class="wow fadeInUp">Te ayudamos a diseñar tu caja o carroceria de acuerdo a tus necesidades y a decidir la mejor opción teniendo en cuenta la calidad de neustro producto. Todo es posible con nosotros.</p>
             </div>
         </div>
     </div>
@@ -109,15 +109,15 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-1.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/especiales/thumbs/especial-1.jpg" class="img-fluid z-depth-1" alt="Adaptaciones y trabajos especiales">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
+                        <img src="img/especiales/thumbs/especial-1.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-2.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-2.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -125,7 +125,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-3.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-3.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -133,7 +133,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-4.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-4.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -141,7 +141,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-5.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-5.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -149,7 +149,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-6.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-6.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -157,7 +157,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-7.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-7.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -165,7 +165,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-8.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-8.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -173,7 +173,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-9.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-9.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -181,7 +181,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-10.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-10.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -189,7 +189,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-11.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-11.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -197,7 +197,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-12.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-12.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -205,7 +205,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-13.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-13.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -213,7 +213,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-14.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-14.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -221,7 +221,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/especiales/especial-15.jpg" data-lightbox="roadtrip" data-title="Adaptaciones y trabajos especiales">
-                    <div class="view zoom z-depth-1 mb-4">
+                    <div class="view zoom z-depth-1 mb-4 wow fadeIn">
                         <img src="img/especiales/thumbs/especial-15.jpg" class="img-fluid" alt="Adaptaciones y trabajos especiales">
                         <div class="mask flex-center"></div>
                     </div>
@@ -240,7 +240,7 @@
             <div class="col-12 col-md-6 col-lg-4 text-center">
                 <a href="contacto.html">
                     <button type="button" class="btn btn-hersa btn-block waves-effect btn-lg">
-                        <h4><i class="fas fa-thumbs-up mr-3"></i>Cotizar</h4>
+                        <h4 class="wow fadeInUp"><i class="fas fa-thumbs-up mr-3"></i>Cotizar</h4>
                     </button>
                 </a>
             </div>
@@ -311,7 +311,7 @@
                         San Miguel Toto, Metepec, Méx.</a>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-envelope"></i></span>
-                        <a href="mailto:contacto@carroceriashersa.mx">contacto@carroceriashersa.mx</a>
+                        <a href="mailto:ventas@carroceriashersa.mx">ventas@carroceriashersa.mx</a>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-phone"></i></span>
                         <a href="tel:2325828">2-32-58-28</a> &nbsp; <a href="tel:2325984">2-32-59-84</a> <br>
@@ -348,5 +348,16 @@
 <script src="node_modules/wowjs/dist/wow.min.js"></script>
 <script src="node_modules/imagesloaded/imagesloaded.pkgd.min.js"></script>
 <script src="node_modules/lightbox2/dist/js/lightbox.min.js"></script>
+<script type="text/javascript">
+var wow = new WOW(
+  {
+    boxClass:     'wow',
+    animateClass: 'animated',
+    offset:       30,
+    mobile:       true
+  }
+);
+wow.init();
+</script>
 </body>
 </html>
