--- a/contacto.html
+++ b/contacto.html
@@ -55,11 +55,11 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbar-productos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Productos</a>
                 <div class="dropdown-menu dropdown-primary" aria-labelledby="navbar-productos">
-                    <a class="dropdown-item" href="cajas-secas.html">Cajas secas</a>
-                    <a class="dropdown-item" href="alargamientos.html">Alargamientos</a>
+                    <a class="dropdown-item" href="cajas-secas.html">Cajas secas, de copete y cuadradas</a>
+                    <a class="dropdown-item" href="alargamientos.html">Alargamientos y acorazados</a>
                     <a class="dropdown-item" href="carrocerias.html">Carrocerías</a>
-                    <a class="dropdown-item" href="cajas-refrigeradas.html">Cajas refrigeradas</a>
-                    <a class="dropdown-item" href="adaptaciones.html">Adaptaciones</a>
+                    <a class="dropdown-item" href="cajas-refrigeradas.html">Cajas de refrigeración</a>
+                    <a class="dropdown-item" href="adaptaciones.html">Adaptaciones y trabajos especiales</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -82,7 +82,7 @@
     <div class="container">
         <div class="row justify-content-center mb-4">
             <div class="col-12 col-md-10">
-                <h1 class="text-center">Contáctanos</h1>
+                <h1 class="text-center wow fadeInUp">Contáctanos</h1>
             </div>
         </div>
         <div class="row justify-content-center d-flex align-items-center mb-5">
@@ -94,15 +94,15 @@
             <div class="col-12 col-md-4" id="contact-info">
                 <ul class="fa-ul ml-4">
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-home fa-2x"></i></span>
-                        <p class="ml-3"><a href="https://goo.gl/maps/kBJwVD8xfL62" target="_blank" rel="external">Carretera Toluca-Tenango Km. 8.5 <br>
+                        <p class="ml-3 wow fadeInUp"><a href="https://goo.gl/maps/kBJwVD8xfL62" target="_blank" rel="external">Carretera Toluca-Tenango Km. 8.5 <br>
                         San Miguel Toto, Metepec, Méx.</a></p>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-envelope fa-2x"></i></span>
-                        <p class="ml-3"><a href="mailto:contacto@carroceriashersa.mx">contacto@carroceriashersa.mx</a></p>
+                        <p class="ml-3 wow fadeInUp"><a href="mailto:contacto@carroceriashersa.mx">contacto@carroceriashersa.mx</a></p>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-phone fa-2x"></i></span>
-                        <p class="ml-3"><a href="tel:2325828">2-32-58-28</a> &nbsp; <a href="tel:2325984">2-32-59-84</a> <br>
-                        <a href="tel:2326069">2-32-60-69</a></p>
+                        <p class="ml-3 wow fadeInUp"><a href="tel:2325828">2-32-58-28</a> &nbsp; <a href="tel:2325984">2-32-59-84</a> <br>
+                        <a href="tel:2326069 wow fadeInUp">2-32-60-69</a></p>
                     </li>
                 </ul>
             </div>
@@ -113,26 +113,26 @@
             <div class="col-12 col-md-9 col-lg-6">
                 <div class="card">
                     <div class="card-body">
-                        <h1 class="text-center mb-3">Cotizaciones</h1>
+                        <h1 class="text-center mb-3 wow fadeInUp">Cotizaciones</h1>
                         <form action="https://formspree.io/richardbrees1@gmail.com" method="POST">
                             <div class="form-group">
-                                <p class="text-muted text-right"><small>* Todos los campos son requeridos.</small></p>
+                                <p class="text-muted text-right wow fadeInUp"><small>* Todos los campos son requeridos.</small></p>
                             </div>
 
                             <!-- Nombre -->
-                            <div class="form-group">
+                            <div class="form-group wow fadeIn">
                                 <label for="nombre">Nombre *</label>
                                 <input type="text" class="form-control form-control-sm" id="nombre" name="Nombre" required>
                             </div>
 
                             <!-- Correo -->
-                            <div class="form-group">
+                            <div class="form-group wow fadeIn">
                                 <label for="correo">Correo *</label>
                                 <input type="email" class="form-control form-control-sm" id="correo" name="_replyto" required>
                             </div>
 
                             <!-- Producto -->
-                            <div class="form-group">
+                            <div class="form-group wow fadeIn">
                                 <label for="producto">Producto *</label>
                                 <select class="form-control form-control-sm" id="producto" name="Producto" required>
                                     <option value="0">Selecciona un producto</option>
@@ -147,21 +147,21 @@
                             <!-- Dimensiones -->
                             <div class="row">
                                 <div class="col-12 col-md-4">
-                                    <div class="form-group">
+                                    <div class="form-group wow fadeIn">
                                         <label for="largo">Largo *</label>
                                         <input type="text" class="form-control form-control-sm" id="largo" name="Largo" aria-describedby="largoHelp" required>
                                         <p id="largoHelp" class="form-text text-muted text-right">cm</p>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-4">
-                                    <div class="form-group">
+                                    <div class="form-group wow fadeIn">
                                         <label for="alto">Alto *</label>
                                         <input type="text" class="form-control form-control-sm" id="alto" name="Alto" aria-describedby="altoHelp" required>
                                         <p id="altoHelp" class="form-text text-muted text-right">cm</p>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-4">
-                                    <div class="form-group">
+                                    <div class="form-group wow fadeIn">
                                         <label for="ancho">Ancho *</label>
                                         <input type="text" class="form-control form-control-sm" id="ancho" name="Ancho" aria-describedby="anchoHelp" required>
                                         <p id="anchoHelp" class="form-text text-muted text-right">cm</p>
@@ -170,7 +170,7 @@
                             </div>
 
                             <!-- Modelo de unidad -->
-                            <div class="form-group">
+                            <div class="form-group wow fadeIn">
                                 <label for="modelo">Modelo de unidad *</label>
                                 <select class="form-control form-control-sm" id="modelo" name="Modelo" required>
                                     <option value="0">Selecciona un modelo</option>
@@ -189,7 +189,7 @@
                                     <option value="Otro">Otro</option>
                                 </select>
                             </div>
-                            <div class="form-group" id="other">
+                            <div class="form-group wow fadeIn" id="other">
                                 <label for="otroModelo">¿Cuál modelo?</label>
                                 <input type="text" class="form-control form-control-sm" id="otroModelo" name="Otro Modelo">
                             </div>
@@ -197,7 +197,7 @@
                             <!-- Botón de subir -->
                             <div class="row justify-content-center mt-3">
                                 <div class="col-12 col-md-9 col-lg-6">
-                                    <button type="submit" class="btn btn-hersa btn-block" value="Send">Cotizar</button>
+                                    <button type="submit" class="btn btn-hersa btn-block wow fadeInUp" value="Send">Cotizar</button>
                                 </div>
                             </div>
                         </form>
@@ -271,7 +271,7 @@
                         San Miguel Toto, Metepec, Méx.</a>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-envelope"></i></span>
-                        <a href="mailto:contacto@carroceriashersa.mx">contacto@carroceriashersa.mx</a>
+                        <a href="mailto:ventas@carroceriashersa.mx">ventas@carroceriashersa.mx</a>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-phone"></i></span>
                         <a href="tel:2325828">2-32-58-28</a> &nbsp; <a href="tel:2325984">2-32-59-84</a> <br>
@@ -322,6 +322,15 @@ $(document).ready(function() {
         }
     });
 });
+var wow = new WOW(
+  {
+    boxClass:     'wow',
+    animateClass: 'animated',
+    offset:       30,
+    mobile:       true
+  }
+);
+wow.init();
 </script>
 </body>
 </html>
