--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbar-productos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Productos</a>
                 <div class="dropdown-menu dropdown-primary" aria-labelledby="navbar-productos">
-                    <a class="dropdown-item" href="cajas-secas.html">Cajas secas</a>
-                    <a class="dropdown-item" href="alargamientos.html">Alargamientos</a>
+                    <a class="dropdown-item" href="cajas-secas.html">Cajas secas, de copete y cuadradas</a>
+                    <a class="dropdown-item" href="alargamientos.html">Alargamientos y acorazados</a>
                     <a class="dropdown-item" href="carrocerias.html">Carrocerías</a>
-                    <a class="dropdown-item" href="cajas-refrigeradas.html">Cajas refrigeradas</a>
-                    <a class="dropdown-item" href="adaptaciones.html">Adaptaciones</a>
+                    <a class="dropdown-item" href="cajas-refrigeradas.html">Cajas de refrigeración</a>
+                    <a class="dropdown-item" href="adaptaciones.html">Adaptaciones y trabajos especiales</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -92,7 +92,7 @@
     </ol>
     <!--/.Indicators-->
     <!--Slides-->
-    <div class="carousel-inner" role="listbox">
+    <div class="carousel-inner wow fadeIn" role="listbox">
         <div class="carousel-item active">
             <img class="d-block w-100" src="img/home/slider-1.jpg" alt="carrocerias-hersa">
         </div>
@@ -131,13 +131,13 @@
     <div class="container my-5 py-5 d-flex">
         <div class="row justify-content-center align-items-center">
             <div class="col-12 col-md-6">
-                <h1 class="mb-3">¿A qué nos dedicamos?</h1>
-                <p>Venta e instalación de cajas y carrocerías en Toluca, trabajos especiales de acuerdo a las necesidades del cliente, como también alargados y acorazados de chasis.</p>
-                <p>Fabricación de carrocerías para camioneta y camión. Cajas secas e inyectadas, de lujo, madera y laminada en general.</p>
-                <p>Trabajos especiales, alargamientos de chasis y aplicación de pintura.</p>
+                <h1 class="mb-3 wow fadeInUp">¿A qué nos dedicamos?</h1>
+                <p class="wow fadeInUp">Venta e instalación de cajas y carrocerías en Toluca, trabajos especiales de acuerdo a las necesidades del cliente, como también alargados y acorazados de chasis.</p>
+                <p class="wow fadeInUp">Fabricación de carrocerías para camioneta y camión. Cajas secas e inyectadas, de lujo, madera y laminada en general.</p>
+                <p class="wow fadeInUp">Trabajos especiales, alargamientos de chasis y aplicación de pintura.</p>
             </div>
             <div class="col-12 col-md-6">
-                <img src="img/home/about.jpg" alt="about" class="img-fluid z-depth-1">
+                <img src="img/home/about.jpg" alt="about" class="img-fluid z-depth-1 wow fadeIn">
             </div>
         </div>
     </div>
@@ -150,7 +150,7 @@
     <div class="container my-5">
         <div class="row justify-content-center mb-4">
             <div class="col-12 col-md-10">
-                <h2 class="text-center">Productos que ponemos al alcance de tus manos</h2>
+                <h2 class="text-center wow fadeInUp">Productos que ponemos al alcance de tus manos</h2>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -158,10 +158,10 @@
             <!-- Cajas Secas -->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card mb-4">
-                    <img src="img/home/card-secas.jpg" alt="carrocerias-hersa-cajas-secas" class="card-img-top">
+                    <img src="img/home/card-secas.jpg" alt="carrocerias-hersa-cajas-secas" class="card-img-top wow fadeIn">
                     <div class="card-body">
-                        <h4 class="card-title"><a>Cajas secas, de copete y cuadradas</a></h4>
-                        <a href="cajas-secas.html" class="btn btn-hersa">Ver más</a>
+                        <h4 class="card-title wow fadeInUp"><a>Cajas secas, de copete y cuadradas</a></h4>
+                        <a href="cajas-secas.html" class="btn btn-hersa wow fadeIn">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -169,10 +169,10 @@
             <!-- Alargamientos -->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card mb-4">
-                    <img src="img/home/card-alarga.jpg" alt="carrocerias-hersa-alargamientos-acorazados" class="card-img-top">
+                    <img src="img/home/card-alarga.jpg" alt="carrocerias-hersa-alargamientos-acorazados" class="card-img-top wow fadeIn">
                     <div class="card-body">
-                        <h4 class="card-title"><a>Alargamientos y acorazados</a></h4>
-                        <a href="alargamientos.html" class="btn btn-hersa">Ver más</a>
+                        <h4 class="card-title wow fadeInUp"><a>Alargamientos y acorazados</a></h4>
+                        <a href="alargamientos.html" class="btn btn-hersa wow fadeIn">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -180,10 +180,10 @@
             <!-- Carrocerias -->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card mb-4">
-                    <img src="img/home/card-carroceria.jpg" alt="carrocerias-hersa" class="card-img-top">
+                    <img src="img/home/card-carroceria.jpg" alt="carrocerias-hersa" class="card-img-top wow fadeIn">
                     <div class="card-body">
-                        <h4 class="card-title"><a>Carrocerias</a></h4>
-                        <a href="carrocerias.html" class="btn btn-hersa">Ver más</a>
+                        <h4 class="card-title wow fadeInUp"><a>Carrocerias</a></h4>
+                        <a href="carrocerias.html" class="btn btn-hersa wow fadeIn">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -191,10 +191,10 @@
             <!-- Cajas de refrigeración -->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card mb-4">
-                    <img src="img/home/card-refri.jpg" alt="carrocerias-hersa-refrigeración" class="card-img-top">
+                    <img src="img/home/card-refri.jpg" alt="carrocerias-hersa-refrigeración" class="card-img-top wow fadeIn">
                     <div class="card-body">
-                        <h4 class="card-title"><a>Cajas de refrigeración</a></h4>
-                        <a href="cajas-refrigeradas.html" class="btn btn-hersa">Ver más</a>
+                        <h4 class="card-title wow fadeInUp"><a>Cajas de refrigeración</a></h4>
+                        <a href="cajas-refrigeradas.html" class="btn btn-hersa wow fadeIn">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -202,10 +202,10 @@
             <!-- Trabajos especiales y adaptaciones -->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card mb-4">
-                    <img src="img/home/card-especial.jpg" alt="carrocerias-hersa-adaptaciones" class="card-img-top">
+                    <img src="img/home/card-especial.jpg" alt="carrocerias-hersa-adaptaciones" class="card-img-top wow fadeIn">
                     <div class="card-body">
-                        <h4 class="card-title"><a>Trabajos especiales y adaptaciones</a></h4>
-                        <a href="adaptaciones.html" class="btn btn-hersa">Ver más</a>
+                        <h4 class="card-title wow fadeInUp"><a>Trabajos especiales y adaptaciones</a></h4>
+                        <a href="adaptaciones.html" class="btn btn-hersa wow fadeIn">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -220,7 +220,7 @@
     <div class="container my-5">
         <div class="row justify-content-center mb-4">
             <div class="col-12 col-md-10">
-                <h2 class="text-center">Nuestro proceso</h2>
+                <h2 class="text-center wow fadeInUp">Nuestro proceso</h2>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -231,7 +231,7 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                     </ol>
-                    <div class="carousel-inner">
+                    <div class="carousel-inner wow fadeIn">
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="img/home/process-1.jpg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
@@ -275,30 +275,12 @@
     <div class="container-fluid mt-5">
         <div class="row justify-content-center py-5">
             <div class="col-12 col-md-10 col-lg-8">
-                <h2 class="text-center"><i class="fas fa-quote-left mr-3"></i>Simplemente, no se piensa… ¡SE HACE!<i class="fas fa-quote-right ml-3"></i></h2>
+                <h2 class="text-center wow fadeInUp"><i class="fas fa-quote-left mr-3"></i>Simplemente, no se piensa… ¡SE HACE!<i class="fas fa-quote-right ml-3"></i></h2>
             </div>
         </div>
     </div>
 </section>
 </main>
-
-
-
-<!-- <form action="https://www.enformed.io/qy9nmk7x" method="POST" >
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Message</label>
-    <input type="text" name="message" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div class="form-check">
-    <input type="checkbox" name="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form> -->
 
 
 <!-- FOOTER
@@ -362,7 +344,7 @@
                         San Miguel Toto, Metepec, Méx.</a>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-envelope"></i></span>
-                        <a href="mailto:contacto@carroceriashersa.mx">contacto@carroceriashersa.mx</a>
+                        <a href="mailto:ventas@carroceriashersa.mx">ventas@carroceriashersa.mx</a>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-phone"></i></span>
                         <a href="tel:2325828">2-32-58-28</a> &nbsp; <a href="tel:2325984">2-32-59-84</a> <br>
@@ -398,5 +380,16 @@
 <script src="node_modules/mdbootstrap/js/mdb.min.js"></script>
 <script src="node_modules/wowjs/dist/wow.min.js"></script>
 <script src="node_modules/imagesloaded/imagesloaded.pkgd.min.js"></script>
+<script type="text/javascript">
+var wow = new WOW(
+  {
+    boxClass:     'wow',
+    animateClass: 'animated',
+    offset:       30,
+    mobile:       true
+  }
+);
+wow.init();
+</script>
 </body>
 </html>
