--- a/aviso-privacidad.html
+++ b/aviso-privacidad.html
@@ -55,11 +55,11 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbar-productos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Productos</a>
                 <div class="dropdown-menu dropdown-primary" aria-labelledby="navbar-productos">
-                    <a class="dropdown-item" href="cajas-secas.html">Cajas secas</a>
-                    <a class="dropdown-item" href="alargamientos.html">Alargamientos</a>
+                    <a class="dropdown-item" href="cajas-secas.html">Cajas secas, de copete y cuadradas</a>
+                    <a class="dropdown-item" href="alargamientos.html">Alargamientos y acorazados</a>
                     <a class="dropdown-item" href="carrocerias.html">Carrocerías</a>
-                    <a class="dropdown-item" href="cajas-refrigeradas.html">Cajas refrigeradas</a>
-                    <a class="dropdown-item" href="adaptaciones.html">Adaptaciones</a>
+                    <a class="dropdown-item" href="cajas-refrigeradas.html">Cajas de refrigeración</a>
+                    <a class="dropdown-item" href="adaptaciones.html">Adaptaciones y trabajos especiales</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -82,38 +82,38 @@
     <div class="container">
         <div class="row justify-content-center mb-4">
             <div class="col-12 col-md-10">
-                <h1 class="text-center">Aviso de privacidad</h1>
+                <h1 class="text-center wow fadeInUp">Aviso de privacidad</h1>
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col-12 col-md-10 col-lg-8">
-                <p>El sitio web ubicado en la dirección <a href="https://carroceriashersa.mx">https://carroceriashersa.mx</a>, incluyendo cualquiera de sus subdominios o secciones (en adelante, el “Sitio Web”) está operado por Carrocerias HERSA de Toluca (en adelante “HERSA”), con domicilio comercial en Carretera Toluca-Tenango Km. 8.5, San Miguel Toto, CP 52143. Metepec, Estado de México. México.</p>
-                <p>El siguiente Aviso de Privacidad establece los términos en que <strong>HERSA</strong> usa y protege la información que es proporcionada por sus usuarios al momento de utilizar su sitio web. Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando que sólo se empleará de acuerdo con los términos de éste documento. Sin embargo éste Aviso de Privacidad puede cambiar con el tiempo o ser actualizado por lo que le recomendamos y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.</p>
-                <p>El acceso y uso del Sitio Web suponen que el Usuario ha leído y acepta en su totalidad el presente Aviso de Privacidad y Cookies. La fecha al inicio del presente Aviso de Privacidad y Cookies indica la fecha de la última revisión del Aviso de Privacidad y Cookies, que será aplicable desde la fecha de su publicación. <strong>HERSA</strong> recomienda por tanto revisar el Aviso de Privacidad y Cookies regularmente.</p>
+                <p class="wow fadeIn">El sitio web ubicado en la dirección <a href="https://carroceriashersa.mx">https://carroceriashersa.mx</a>, incluyendo cualquiera de sus subdominios o secciones (en adelante, el “Sitio Web”) está operado por Carrocerias HERSA de Toluca (en adelante “HERSA”), con domicilio comercial en Carretera Toluca-Tenango Km. 8.5, San Miguel Toto, CP 52143. Metepec, Estado de México. México.</p>
+                <p class="wow fadeIn">El siguiente Aviso de Privacidad establece los términos en que <strong>HERSA</strong> usa y protege la información que es proporcionada por sus usuarios al momento de utilizar su sitio web. Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando que sólo se empleará de acuerdo con los términos de éste documento. Sin embargo éste Aviso de Privacidad puede cambiar con el tiempo o ser actualizado por lo que le recomendamos y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.</p>
+                <p class="wow fadeIn">El acceso y uso del Sitio Web suponen que el Usuario ha leído y acepta en su totalidad el presente Aviso de Privacidad y Cookies. La fecha al inicio del presente Aviso de Privacidad y Cookies indica la fecha de la última revisión del Aviso de Privacidad y Cookies, que será aplicable desde la fecha de su publicación. <strong>HERSA</strong> recomienda por tanto revisar el Aviso de Privacidad y Cookies regularmente.</p>
 
                 <h3 class="mt-3">Información que es recogida</h3>
-                <p>Nuestro sitio web podrá recoger información personal por ejemplo: Nombre,  información de contacto como  su dirección de correo electrónica e información demográfica. Así mismo cuando sea necesario podrá ser requerida información específica para procesar algún pedido o realizar una entrega o facturación.</p>
+                <p class="wow fadeIn">Nuestro sitio web podrá recoger información personal por ejemplo: Nombre,  información de contacto como  su dirección de correo electrónica e información demográfica. Así mismo cuando sea necesario podrá ser requerida información específica para procesar algún pedido o realizar una entrega o facturación.</p>
 
                 <h3 class="mt-3">Uso de la información recogida</h3>
-                <p>Nuestro sitio web emplea la información con el fin de proporcionar el mejor servicio posible, particularmente para mantener un registro de usuarios, de pedidos en caso que aplique, y mejorar nuestros productos y servicios.  Es posible que sean enviados correos electrónicos periódicamente a través de nuestro sitio con ofertas especiales, nuevos productos y otra información publicitaria que consideremos relevante para usted o que pueda brindarle algún beneficio, estos correos electrónicos serán enviados a la dirección que usted proporcione y podrán ser cancelados en cualquier momento.</p>
-                <p><strong>HERSA</strong> está altamente comprometido para cumplir con el compromiso de mantener su información segura. Usamos los sistemas más avanzados y los actualizamos constantemente para asegurarnos que no exista ningún acceso no autorizado.</p>
+                <p class="wow fadeIn">Nuestro sitio web emplea la información con el fin de proporcionar el mejor servicio posible, particularmente para mantener un registro de usuarios, de pedidos en caso que aplique, y mejorar nuestros productos y servicios.  Es posible que sean enviados correos electrónicos periódicamente a través de nuestro sitio con ofertas especiales, nuevos productos y otra información publicitaria que consideremos relevante para usted o que pueda brindarle algún beneficio, estos correos electrónicos serán enviados a la dirección que usted proporcione y podrán ser cancelados en cualquier momento.</p>
+                <p class="wow fadeIn"><strong>HERSA</strong> está altamente comprometido para cumplir con el compromiso de mantener su información segura. Usamos los sistemas más avanzados y los actualizamos constantemente para asegurarnos que no exista ningún acceso no autorizado.</p>
 
                 <h3 class="mt-3">Cookies</h3>
-                <p>Una cookie se refiere a un fichero que es enviado con la finalidad de solicitar permiso para almacenarse en su ordenador, al aceptar dicho fichero se crea y la cookie sirve entonces para tener información respecto al tráfico web, y también facilita las futuras visitas a una web recurrente. Otra función que tienen las cookies es que con ellas las web pueden reconocerte individualmente y por tanto brindarte el mejor servicio personalizado de su web.</p>
-                <p>Nuestro sitio web emplea las cookies para poder identificar las páginas que son visitadas y su frecuencia. Esta información es empleada únicamente para análisis estadístico y después la información se elimina de forma permanente. Usted puede eliminar las cookies en cualquier momento desde su ordenador. Sin embargo las cookies ayudan a proporcionar un mejor servicio de los sitios web, estás no dan acceso a información de su ordenador ni de usted, a menos de que usted así lo quiera y la proporcione directamente. Usted puede aceptar o negar el uso de cookies, sin embargo la mayoría de navegadores aceptan cookies automáticamente pues sirve para tener un mejor servicio web. También usted puede cambiar la configuración de su ordenador para declinar las cookies. Si se declinan es posible que no pueda utilizar algunos de nuestros servicios.</p>
+                <p class="wow fadeIn">Una cookie se refiere a un fichero que es enviado con la finalidad de solicitar permiso para almacenarse en su ordenador, al aceptar dicho fichero se crea y la cookie sirve entonces para tener información respecto al tráfico web, y también facilita las futuras visitas a una web recurrente. Otra función que tienen las cookies es que con ellas las web pueden reconocerte individualmente y por tanto brindarte el mejor servicio personalizado de su web.</p>
+                <p class="wow fadeIn">Nuestro sitio web emplea las cookies para poder identificar las páginas que son visitadas y su frecuencia. Esta información es empleada únicamente para análisis estadístico y después la información se elimina de forma permanente. Usted puede eliminar las cookies en cualquier momento desde su ordenador. Sin embargo las cookies ayudan a proporcionar un mejor servicio de los sitios web, estás no dan acceso a información de su ordenador ni de usted, a menos de que usted así lo quiera y la proporcione directamente. Usted puede aceptar o negar el uso de cookies, sin embargo la mayoría de navegadores aceptan cookies automáticamente pues sirve para tener un mejor servicio web. También usted puede cambiar la configuración de su ordenador para declinar las cookies. Si se declinan es posible que no pueda utilizar algunos de nuestros servicios.</p>
 
                 <h3 class="mt-3">Enlaces a terceros</h3>
-                <p>Este sitio web pudiera contener en laces a otros sitios que pudieran ser de su interés. Una vez que usted de clic en estos enlaces y abandone nuestra página, ya no tenemos control sobre al sitio al que es redirigido y por lo tanto no somos responsables de los términos o privacidad ni de la protección de sus datos en esos otros sitios terceros. Dichos sitios están sujetos a sus propias políticas de privacidad por lo cual es recomendable que los consulte para confirmar que usted está de acuerdo con estas.</p>
+                <p class="wow fadeIn">Este sitio web pudiera contener en laces a otros sitios que pudieran ser de su interés. Una vez que usted de clic en estos enlaces y abandone nuestra página, ya no tenemos control sobre al sitio al que es redirigido y por lo tanto no somos responsables de los términos o privacidad ni de la protección de sus datos en esos otros sitios terceros. Dichos sitios están sujetos a sus propias políticas de privacidad por lo cual es recomendable que los consulte para confirmar que usted está de acuerdo con estas.</p>
 
                 <h3 class="mt-3">Control de su información personal</h3>
-                <p>En cualquier momento usted puede restringir la recopilación o el uso de la información personal que es proporcionada a nuestro sitio web.  Cada vez que se le solicite rellenar un formulario, como el de alta de usuario, puede marcar o desmarcar la opción de recibir información por correo electrónico.  En caso de que haya marcado la opción de recibir nuestro boletín o publicidad usted puede cancelarla en cualquier momento.</p>
-                <p><strong>HERSA</strong> no venderá, cederá ni distribuirá la información personal que es recopilada sin su consentimiento, salvo que sea requerido por un juez con un orden judicial.</p>
-                <p><strong>HERSA</strong> se reserva el derecho de cambiar los términos del presente Aviso de Privacidad en cualquier momento.</p>
+                <p class="wow fadeIn">En cualquier momento usted puede restringir la recopilación o el uso de la información personal que es proporcionada a nuestro sitio web.  Cada vez que se le solicite rellenar un formulario, como el de alta de usuario, puede marcar o desmarcar la opción de recibir información por correo electrónico.  En caso de que haya marcado la opción de recibir nuestro boletín o publicidad usted puede cancelarla en cualquier momento.</p>
+                <p class="wow fadeIn"><strong>HERSA</strong> no venderá, cederá ni distribuirá la información personal que es recopilada sin su consentimiento, salvo que sea requerido por un juez con un orden judicial.</p>
+                <p class="wow fadeIn"><strong>HERSA</strong> se reserva el derecho de cambiar los términos del presente Aviso de Privacidad en cualquier momento.</p>
 
                 <h3 class="mt-3">Propiedad intelectual</h3>
-                <p>El usuario, única y exclusivamente, puede utilizar el material que aparezca en este sitio web para su uso personal y privado, quedando prohibido su uso con fines comerciales o para incurrir en actividades ilícitas. Todos los derechos derivados de la propiedad intelectual están expresamente reservados por <strong>HERSA</strong>.</p>
-                <p class="mt-4"><strong>HERSA</strong> velará por el cumplimiento de las anteriores condiciones como por la debida utilización de los contenidos presentados en sus páginas web, ejercitando todas las acciones civiles y penales que le correspondan en el caso de infracción o incumplimiento de estos derechos por parte del usuario.</p>
-                <p class="text-right font-italic">Fecha de útlima actualización: Junio 2018</p>
+                <p class="wow fadeIn">El usuario, única y exclusivamente, puede utilizar el material que aparezca en este sitio web para su uso personal y privado, quedando prohibido su uso con fines comerciales o para incurrir en actividades ilícitas. Todos los derechos derivados de la propiedad intelectual están expresamente reservados por <strong>HERSA</strong>.</p>
+                <p class="mt-4 wow fadeIn"><strong>HERSA</strong> velará por el cumplimiento de las anteriores condiciones como por la debida utilización de los contenidos presentados en sus páginas web, ejercitando todas las acciones civiles y penales que le correspondan en el caso de infracción o incumplimiento de estos derechos por parte del usuario.</p>
+                <p class="text-right font-italic wow fadeInRight">Fecha de útlima actualización: Junio 2018</p>
             </div>
         </div>
     </div>
@@ -182,7 +182,7 @@
                         San Miguel Toto, Metepec, Méx.</a>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-envelope"></i></span>
-                        <a href="mailto:contacto@carroceriashersa.mx">contacto@carroceriashersa.mx</a>
+                        <a href="mailto:ventas@carroceriashersa.mx">ventas@carroceriashersa.mx</a>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-phone"></i></span>
                         <a href="tel:2325828">2-32-58-28</a> &nbsp; <a href="tel:2325984">2-32-59-84</a> <br>
@@ -219,7 +219,16 @@
 <script src="node_modules/wowjs/dist/wow.min.js"></script>
 <script src="node_modules/imagesloaded/imagesloaded.pkgd.min.js"></script>
 <script type="text/javascript">
-
+var wow = new WOW(
+  {
+    boxClass:     'wow',
+    animateClass: 'animated',
+    offset:       30,
+    mobile:       true
+  }
+);
+wow.init();
+$("h3").addClass('wow fadeInUp');
 </script>
 </body>
 </html>
