--- a/galeria.html
+++ b/galeria.html
@@ -55,11 +55,11 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbar-productos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Productos</a>
                 <div class="dropdown-menu dropdown-primary" aria-labelledby="navbar-productos">
-                    <a class="dropdown-item" href="cajas-secas.html">Cajas secas</a>
-                    <a class="dropdown-item" href="alargamientos.html">Alargamientos</a>
+                    <a class="dropdown-item" href="cajas-secas.html">Cajas secas, de copete y cuadradas</a>
+                    <a class="dropdown-item" href="alargamientos.html">Alargamientos y acorazados</a>
                     <a class="dropdown-item" href="carrocerias.html">Carrocerías</a>
-                    <a class="dropdown-item" href="cajas-refrigeradas.html">Cajas refrigeradas</a>
-                    <a class="dropdown-item" href="adaptaciones.html">Adaptaciones</a>
+                    <a class="dropdown-item" href="cajas-refrigeradas.html">Cajas de refrigeración</a>
+                    <a class="dropdown-item" href="adaptaciones.html">Adaptaciones y trabajos especiales</a>
                 </div>
             </li>
             <li class="nav-item active">
@@ -621,7 +621,7 @@
                         San Miguel Toto, Metepec, Méx.</a>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-envelope"></i></span>
-                        <a href="mailto:contacto@carroceriashersa.mx">contacto@carroceriashersa.mx</a>
+                        <a href="mailto:ventas@carroceriashersa.mx">ventas@carroceriashersa.mx</a>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-phone"></i></span>
                         <a href="tel:2325828">2-32-58-28</a> &nbsp; <a href="tel:2325984">2-32-59-84</a> <br>
